// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dynamic-info-patterns-form Renders \`dynamic-info-patterns-form\` with custom props 1`] = `
<c-patterns-field-stub
  alarm-attributes="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  both-counters=""
  entity-attributes="[object Object]"
  isentitytype="true"
  some-required=""
  value="[object Object]"
  with-alarm=""
  with-entity=""
/>
`;

exports[`dynamic-info-patterns-form Renders \`dynamic-info-patterns-form\` with default props 1`] = `
<c-patterns-field-stub
  alarm-attributes="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  both-counters=""
  entity-attributes="[object Object]"
  some-required=""
  value="[object Object]"
  with-alarm=""
  with-entity=""
/>
`;
